--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -6,8 +6,8 @@ CUSTOM TO THE NEW HOME PAGE
 @import "icons.scss";
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
-* {
-  font-family: 'Nunito', sans-serif !important;
+:root {
+  --ifm-font-family-base: 'Nunito', sans-serif;
 }
 
 html {
